My last update, added person.json and cleaned-up the code slightly